--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,6 @@ label:hover{
   padding: 50% 0;
   /* padding controls height, will always be perfectly square regardless of width */
   position: relative;
-  /* opacity: 0.8; */
 }
 .img-wrap img{
   min-width: 100%;
@@ -114,5 +113,5 @@ label:hover{
   max-height: 80%;
   margin: 60px auto;
   box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
-  border: 3px solid white;
+  border: 1px solid rgb(199, 199, 199);
 }
