--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body{
   font-size: 1.2rem;
   letter-spacing: 2px;
   font-weight: bolder;
+  margin-bottom: 2rem;
 }
 .title h2, .title p{
   text-align: center;
